--- a/CMFTAspNet/Pages/Teams/Delete.cshtml
+++ b/CMFTAspNet/Pages/Teams/Delete.cshtml
@@ -16,24 +16,24 @@
             Id:
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Team.Id)
+            @Html.DisplayFor(model => model.Entity.Id)
         </dd>
         <dt class="col-sm-2">
             Name:
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Team.Name)
+            @Html.DisplayFor(model => model.Entity.Name)
         </dd>
         <dt class="col-sm-2">
             ProjectName:
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Team.ProjectName)
+            @Html.DisplayFor(model => model.Entity.ProjectName)
         </dd>
     </dl>
 
     <form method="post">
-        <input type="hidden" asp-for="Team.Id" />
+        <input type="hidden" asp-for="Entity.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
