--- a/CMFTAspNet/Pages/Teams/Details.cshtml
+++ b/CMFTAspNet/Pages/Teams/Details.cshtml
@@ -15,34 +15,34 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Team.Name)
+            @Html.DisplayNameFor(model => model.Entity.Name)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Team.Name)
+            @Html.DisplayFor(model => model.Entity.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Team.ProjectName)
+            @Html.DisplayNameFor(model => model.Entity.ProjectName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Team.ProjectName)
+            @Html.DisplayFor(model => model.Entity.ProjectName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Team.WorkItemTypes)
+            @Html.DisplayNameFor(model => model.Entity.WorkItemTypes)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Team.WorkItemTypes)
+            @Html.DisplayFor(model => model.Entity.WorkItemTypes)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Team.FeatureWIP)
+            @Html.DisplayNameFor(model => model.Entity.FeatureWIP)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Team.FeatureWIP)
+            @Html.DisplayFor(model => model.Entity.FeatureWIP)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Team.ThroughputHistory)
+            @Html.DisplayNameFor(model => model.Entity.ThroughputHistory)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Team.ThroughputHistory)
+            @Html.DisplayFor(model => model.Entity.ThroughputHistory)
         </dd>
     </dl>
 </div>
@@ -52,19 +52,19 @@
 <!-- Add button to trigger update action -->
 <div>
     <form method="post">
-        <input type="hidden" asp-for="Team.Id" />
+        <input type="hidden" asp-for="Entity.Id" />
         <button type="submit" class="btn btn-primary">Refresh Throughput</button>
     </form>
 </div>
 
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Team.Id">Edit</a> |
+    <a asp-page="./Edit" asp-route-id="@Model.Entity.Id">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
 
 <script>
     var ctx = document.getElementById('throughputRunChart').getContext('2d');
-    var rawData = @Html.Raw(Json.Serialize(Model.Team.RawThroughput)); // Serialize the RawThroughput array to JSON
+    var rawData = @Html.Raw(Json.Serialize(Model.Entity.RawThroughput)); // Serialize the RawThroughput array to JSON
     var labels = Array.from({ length: rawData.length }, (_, i) => i.toString()); // Generate labels from 0 to length of RawThroughput array
     var chartData = {
         labels: labels,
