Add table descriptions

--- a/CMFTAspNet/Pages/Projects/Details.cshtml
+++ b/CMFTAspNet/Pages/Projects/Details.cshtml
@@ -53,6 +53,7 @@
 <div id="featuresTable">
     <h4>Features</h4>
     <table class="table">
+        <caption>Features</caption>
         <thead>
             <tr>
                 <th>Feature Id</th>
