--- a/CMFTAspNet/Pages/Projects/Index.cshtml
+++ b/CMFTAspNet/Pages/Projects/Index.cshtml
@@ -11,6 +11,7 @@
     <a asp-page="Create">Create New Project</a>
 </p>
 <table class="table">
+    <caption>New Project</caption>
     <thead>
         <tr>
             <th>
