--- a/CMFTAspNet/Pages/Teams/Index.cshtml
+++ b/CMFTAspNet/Pages/Teams/Index.cshtml
@@ -11,6 +11,7 @@
     <a asp-page="Create">Create New Team</a>
 </p>
 <table class="table">
+    <caption>New Team</caption>
     <thead>
         <tr>
             <th>
