--- a/CMFTAspNet/Pages/Index.cshtml
+++ b/CMFTAspNet/Pages/Index.cshtml
@@ -14,6 +14,7 @@
     <h1>Projects</h1>
 
     <table class="table">
+        <caption>Forecasts</caption>
         <thead>
             <tr>
                 <th>Projects</th>
