More code smell fixes

--- a/CMFTAspNet/Pages/Shared/_Layout.cshtml
+++ b/CMFTAspNet/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Forecasts</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Teams/Index">Team Configuration</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Teams/Index">Teams</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Projects/Index">Projects</a>
