--- a/CMFTAspNet/Pages/Teams/Details.cshtml
+++ b/CMFTAspNet/Pages/Teams/Details.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Details";
 }
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="/lib/Chart/Chart.min.js" integrity="sha256-d9Np49KdviSc4EDxsOPieKUBCpTmrW16eLD+BB4Vaio="></script>
 
 
 <h1>Details</h1>
