--- a/CMFTAspNet/Pages/Projects/Details.cshtml
+++ b/CMFTAspNet/Pages/Projects/Details.cshtml
@@ -71,6 +71,7 @@
 
                     <td>
                         <table>
+                            <caption>Remaining Work</caption>
                             <thead>
                                 <tr>
                                     <th>Team</th>
