--- a/CMFTAspNet/Pages/Projects/Details.cshtml
+++ b/CMFTAspNet/Pages/Projects/Details.cshtml
@@ -63,7 +63,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var feature in Model.Entity.Features)
+            @foreach (var feature in Model.Entity.Features.OrderBy(f => f.Order))
             {
                 <tr>
                     <td>@feature.Id</td>
