--- a/CMFTAspNet/Pages/Projects/Index.cshtml
+++ b/CMFTAspNet/Pages/Projects/Index.cshtml
@@ -57,7 +57,7 @@
                 @Html.DisplayFor(modelItem => item.IncludeUnparentedItems)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-page="./Create" asp-route-id="@item.Id">Edit</a> |
                 <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
             </td>
